# vivara

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: commnads.md  commnads.txt  roadmap.md
src/: cmd.rs  command.rs  connection.rs  gateway.rs  main.rs  util.rs
