[package]
name = "vivara"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.12.0"

futures-util = "0.3.17"

twilight = "0.6.0"
twilight-model = "0.6.4"
twilight-embed-builder = "0.6.0"

tracing-subscriber = "0.2.24"
tracing = "0.1.28"
url = "2.2.2"
shell-words = "1.0.0"
dashmap = "4.0.2"
range_parser = { git = "https://github.com/Nanai10a/range_parser.git" }

[dependencies.tokio]
version = "1.12.0"
features = ["sync"]

[dependencies.twilight-gateway]
version = "0.6.4"
features = ["zlib-simd"]

[dependencies.twilight-http]
version = "0.6.5"
features = ["simd-json"]

[dependencies.songbird]
version = "0.2.0"
default-features = false
features = ["driver", "gateway", "twilight-rustls", "builtin-queue", "zlib-simd"]

[dependencies.simd-json]
version = "0.4.7"
features = ["allow-non-simd"]

[dependencies.clap]
version = "3.0.0-beta.4"
default-features = false
features = ["std", "derive"]
