[package]
name = "vivara"
version = "0.1.0-alpha.2"
edition = "2021"

[dependencies]
actix = "0.13.0"

futures-util = "0.3.21"

twilight = "<0.7"
twilight-model = "<0.7"
twilight-embed-builder = "<0.7"

tracing-subscriber = "0.3.14"
tracing = "0.1.35"
url = "2.2.2"
shell-words = "1.1.0"
dashmap = "5.3.4"
range_parser = { git = "https://github.com/Nanai10a/range_parser.git" }
rand = "0.8.5"

[dependencies.tokio]
version = "1.19.2"
features = ["sync"]

[dependencies.twilight-gateway]
version = "<0.7"
features = ["zlib-simd"]

[dependencies.twilight-http]
version = "<0.7"

[dependencies.songbird]
version = "0.2.2"
default-features = false
features = ["driver", "gateway", "twilight-rustls", "builtin-queue", "zlib-simd"]

[dependencies.simd-json]
version = "0.5.1"
features = ["allow-non-simd"]

[dependencies.clap]
version = "3.2.8"
default-features = false
features = ["std", "derive"]
