[package]
name = "vivara"
version = "0.1.0-alpha.3"
edition = "2021"

[dependencies]
actix = "0.13.0"

futures-util = "0.3.24"

twilight = "^0.12.0"
twilight-model = "^0.12.0"

tracing-subscriber = "0.3.15"
tracing = "0.1.36"
url = "2.3.1"
shell-words = "1.1.0"
dashmap = "5.4.0"
range_parser = { git = "https://github.com/Nanai10a/range_parser.git" }
rand = "0.8.5"
twilight-http = "^0.12.0"
twilight-util = "^0.12.0"

[dependencies.tokio]
version = "1.24.2"
features = ["sync"]

[dependencies.twilight-gateway]
version = "^0.12.0"
features = ["zlib-simd"]

[dependencies.songbird]
version = "0.3.0"
default-features = false
features = [
  "driver",
  "gateway",
  "twilight-rustls",
  "builtin-queue",
  "zlib-simd",
]

[dependencies.simd-json]
version = "0.6.0"
features = ["allow-non-simd"]

[dependencies.clap]
version = "3.2.20"
default-features = false
features = ["std", "derive"]
